--- a/appwrite.json
+++ b/appwrite.json
@@ -1,166 +1,201 @@
 {
-	"projectId": "trackmaniaDailyStats",
-	"projectName": "trackmaniaDailyStats",
-	"collections": [
-		{
-			"$id": "profiles",
-			"$read": ["role:all"],
-			"$write": [],
-			"name": "profiles",
-			"enabled": true,
-			"permission": "collection",
-			"attributes": [
-				{
-					"key": "lastUpdate",
-					"type": "integer",
-					"status": "available",
-					"required": true,
-					"array": false,
-					"min": 0,
-					"max": 9007199254740991,
-					"default": null
-				},
-				{
-					"key": "medals",
-					"type": "string",
-					"status": "available",
-					"required": true,
-					"array": false,
-					"size": 999999,
-					"default": null
-				},
-				{
-					"key": "bronze",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9223372036854776000,
-					"max": 9223372036854776000,
-					"default": null
-				},
-				{
-					"key": "silver",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9223372036854776000,
-					"max": 9223372036854776000,
-					"default": null
-				},
-				{
-					"key": "gold",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9223372036854776000,
-					"max": 9223372036854776000,
-					"default": null
-				},
-				{
-					"key": "author",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9223372036854776000,
-					"max": 9223372036854776000,
-					"default": null
-				},
-				{
-					"key": "score",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9223372036854776000,
-					"max": 9223372036854776000,
-					"default": null
-				}
-			],
-			"indexes": [
-				{
-					"key": "goldIndex",
-					"type": "key",
-					"status": "available",
-					"attributes": ["gold"],
-					"orders": ["ASC"]
-				},
-				{
-					"key": "authorIndex",
-					"type": "key",
-					"status": "available",
-					"attributes": ["author"],
-					"orders": ["ASC"]
-				},
-				{
-					"key": "silverIndex",
-					"type": "key",
-					"status": "available",
-					"attributes": ["silver"],
-					"orders": ["ASC"]
-				},
-				{
-					"key": "bronzeIndex",
-					"type": "key",
-					"status": "available",
-					"attributes": ["bronze"],
-					"orders": ["ASC"]
-				},
-				{
-					"key": "scoreIndex",
-					"type": "key",
-					"status": "available",
-					"attributes": ["score"],
-					"orders": ["ASC"]
-				}
-			]
-		},
-		{
-			"$id": "nadeoCache",
-			"$read": [],
-			"$write": [],
-			"name": "nadeoCache",
-			"enabled": true,
-			"permission": "collection",
-			"attributes": [
-				{
-					"key": "value",
-					"type": "string",
-					"status": "available",
-					"required": true,
-					"array": false,
-					"size": 999999,
-					"default": null
-				}
-			],
-			"indexes": []
-		}
-	],
-	"functions": [
-		{
-			"$id": "nadeoAction",
-			"name": "nadeoAction",
-			"runtime": "deno-1.14",
-			"path": "functions/nadeoAction",
-			"entrypoint": "src/mod.ts",
-			"execute": ["role:all"],
-			"events": [],
-			"schedule": "",
-			"timeout": 300
-		},
-		{
-			"$id": "convertId",
-			"name": "convertId",
-			"runtime": "deno-1.14",
-			"path": "functions/convertId",
-			"entrypoint": "src/mod.ts",
-			"execute": ["role:all"],
-			"events": [],
-			"schedule": "",
-			"timeout": 15
-		}
-	]
+    "projectId": "trackmaniaDailyStats",
+    "projectName": "trackmaniaDailyStats",
+    "collections": [
+        {
+            "$id": "profiles",
+            "$read": [
+                "role:all"
+            ],
+            "$write": [],
+            "name": "profiles",
+            "enabled": true,
+            "permission": "collection",
+            "attributes": [
+                {
+                    "key": "lastUpdate",
+                    "type": "integer",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "min": 0,
+                    "max": 9007199254740991,
+                    "default": null
+                },
+                {
+                    "key": "medals",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 999999,
+                    "default": null
+                },
+                {
+                    "key": "bronze",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "silver",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "gold",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "author",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "score",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "nickname",
+                    "type": "string",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                }
+            ],
+            "indexes": [
+                {
+                    "key": "goldIndex",
+                    "type": "key",
+                    "status": "available",
+                    "attributes": [
+                        "gold"
+                    ],
+                    "orders": [
+                        "ASC"
+                    ]
+                },
+                {
+                    "key": "authorIndex",
+                    "type": "key",
+                    "status": "available",
+                    "attributes": [
+                        "author"
+                    ],
+                    "orders": [
+                        "ASC"
+                    ]
+                },
+                {
+                    "key": "silverIndex",
+                    "type": "key",
+                    "status": "available",
+                    "attributes": [
+                        "silver"
+                    ],
+                    "orders": [
+                        "ASC"
+                    ]
+                },
+                {
+                    "key": "bronzeIndex",
+                    "type": "key",
+                    "status": "available",
+                    "attributes": [
+                        "bronze"
+                    ],
+                    "orders": [
+                        "ASC"
+                    ]
+                },
+                {
+                    "key": "scoreIndex",
+                    "type": "key",
+                    "status": "available",
+                    "attributes": [
+                        "score"
+                    ],
+                    "orders": [
+                        "ASC"
+                    ]
+                }
+            ]
+        },
+        {
+            "$id": "nadeoCache",
+            "$read": [],
+            "$write": [],
+            "name": "nadeoCache",
+            "enabled": true,
+            "permission": "collection",
+            "attributes": [
+                {
+                    "key": "value",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 999999,
+                    "default": null
+                }
+            ],
+            "indexes": []
+        }
+    ],
+    "functions": [
+        {
+            "$id": "nadeoAction",
+            "name": "nadeoAction",
+            "runtime": "deno-1.14",
+            "path": "functions/nadeoAction",
+            "entrypoint": "src/mod.ts",
+            "execute": [
+                "role:all"
+            ],
+            "events": [],
+            "schedule": "",
+            "timeout": 300
+        },
+        {
+            "$id": "convertId",
+            "name": "convertId",
+            "runtime": "deno-1.14",
+            "path": "functions/convertId",
+            "entrypoint": "src/mod.ts",
+            "execute": [
+                "role:all"
+            ],
+            "events": [],
+            "schedule": "",
+            "timeout": 15
+        }
+    ]
 }
