--- a/appwrite.json
+++ b/appwrite.json
@@ -311,6 +311,56 @@
                     "array": false,
                     "size": 255,
                     "default": null
+                },
+                {
+                    "key": "totalScorePositions",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "authorScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "goldScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "silverScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "bronzeScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9223372036854776000,
+                    "max": 9223372036854776000,
+                    "default": null
                 }
             ],
             "indexes": []
@@ -350,6 +400,17 @@
             "execute": [
                 "role:all"
             ],
+            "events": [],
+            "schedule": "",
+            "timeout": 15
+        },
+        {
+            "$id": "calculateDifficulties",
+            "name": "calculateDifficulties",
+            "runtime": "deno-1.14",
+            "path": "functions/calculateDifficulties",
+            "entrypoint": "src/mod.ts",
+            "execute": [],
             "events": [],
             "schedule": "",
             "timeout": 15
