Fix missing attributes

--- a/backend/appwrite.json
+++ b/backend/appwrite.json
@@ -4,43 +4,16 @@
     "collections": [
         {
             "$id": "profiles",
+            "$createdAt": "2022-09-22T16:49:10.072+00:00",
+            "$updatedAt": "2022-09-22T16:49:10.072+00:00",
             "$permissions": [
                 "read(\"any\")"
             ],
-            "name": "profiles",
             "databaseId": "default",
+            "name": "profiles",
             "enabled": true,
             "documentSecurity": false,
             "attributes": [
-                {
-                    "key": "lastUpdate",
-                    "type": "integer",
-                    "status": "available",
-                    "required": true,
-                    "array": false,
-                    "min": -9123372036854776000,
-                    "max": 9123372036854776000,
-                    "default": null
-                },
-                {
-                    "key": "medals",
-                    "type": "string",
-                    "status": "available",
-                    "required": true,
-                    "array": false,
-                    "size": 999999,
-                    "default": null
-                },
-                {
-                    "key": "bronze",
-                    "type": "integer",
-                    "status": "available",
-                    "required": false,
-                    "array": false,
-                    "min": -9123372036854776000,
-                    "max": 9123372036854776000,
-                    "default": null
-                },
                 {
                     "key": "silver",
                     "type": "integer",
@@ -52,7 +25,17 @@
                     "default": null
                 },
                 {
-                    "key": "gold",
+                    "key": "lastUpdate",
+                    "type": "integer",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "bronze",
                     "type": "integer",
                     "status": "available",
                     "required": false,
@@ -72,6 +55,15 @@
                     "default": null
                 },
                 {
+                    "key": "nickname",
+                    "type": "string",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
                     "key": "score",
                     "type": "integer",
                     "status": "available",
@@ -82,12 +74,22 @@
                     "default": null
                 },
                 {
-                    "key": "nickname",
+                    "key": "medals",
                     "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 999999,
+                    "default": null
+                },
+                {
+                    "key": "gold",
+                    "type": "integer",
                     "status": "available",
                     "required": false,
                     "array": false,
-                    "size": 255,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
                     "default": null
                 }
             ],
@@ -115,11 +117,11 @@
                     ]
                 },
                 {
-                    "key": "silverIndex",
+                    "key": "scoreIndex",
                     "type": "key",
                     "status": "available",
                     "attributes": [
-                        "silver"
+                        "score"
                     ],
                     "orders": [
                         "ASC"
@@ -137,11 +139,11 @@
                     ]
                 },
                 {
-                    "key": "scoreIndex",
+                    "key": "silverIndex",
                     "type": "key",
                     "status": "available",
                     "attributes": [
-                        "score"
+                        "silver"
                     ],
                     "orders": [
                         "ASC"
@@ -151,9 +153,11 @@
         },
         {
             "$id": "nadeoCache",
+            "$createdAt": "2022-09-22T16:50:38.139+00:00",
+            "$updatedAt": "2022-09-22T16:50:38.139+00:00",
             "$permissions": [],
-            "name": "nadeoCache",
             "databaseId": "default",
+            "name": "nadeoCache",
             "enabled": true,
             "documentSecurity": false,
             "attributes": [
@@ -171,11 +175,13 @@
         },
         {
             "$id": "dailyMaps",
+            "$createdAt": "2022-09-22T16:50:40.601+00:00",
+            "$updatedAt": "2022-09-22T16:50:40.601+00:00",
             "$permissions": [
                 "read(\"any\")"
             ],
-            "name": "dailyMaps",
             "databaseId": "default",
+            "name": "dailyMaps",
             "enabled": true,
             "documentSecurity": false,
             "attributes": [
@@ -208,41 +214,22 @@
                     "default": null
                 },
                 {
-                    "key": "month",
+                    "key": "silverScore",
                     "type": "integer",
                     "status": "available",
-                    "required": true,
+                    "required": false,
                     "array": false,
                     "min": -9123372036854776000,
                     "max": 9123372036854776000,
                     "default": null
                 },
                 {
-                    "key": "year",
-                    "type": "integer",
-                    "status": "available",
-                    "required": true,
-                    "array": false,
-                    "min": -9123372036854776000,
-                    "max": 9123372036854776000,
-                    "default": null
-                },
-                {
-                    "key": "key",
-                    "type": "string",
-                    "status": "available",
-                    "required": true,
-                    "array": false,
-                    "size": 255,
-                    "default": null
-                },
-                {
-                    "key": "name",
+                    "key": "thumbnailUrl",
                     "type": "string",
                     "status": "available",
                     "required": false,
                     "array": false,
-                    "size": 255,
+                    "size": 2048,
                     "default": null
                 },
                 {
@@ -255,37 +242,27 @@
                     "default": null
                 },
                 {
+                    "key": "authorScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "month",
+                    "type": "integer",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
                     "key": "bronzeScore",
-                    "type": "integer",
-                    "status": "available",
-                    "required": false,
-                    "array": false,
-                    "min": -9123372036854776000,
-                    "max": 9123372036854776000,
-                    "default": null
-                },
-                {
-                    "key": "silverScore",
-                    "type": "integer",
-                    "status": "available",
-                    "required": false,
-                    "array": false,
-                    "min": -9123372036854776000,
-                    "max": 9123372036854776000,
-                    "default": null
-                },
-                {
-                    "key": "goldScore",
-                    "type": "integer",
-                    "status": "available",
-                    "required": false,
-                    "array": false,
-                    "min": -9123372036854776000,
-                    "max": 9123372036854776000,
-                    "default": null
-                },
-                {
-                    "key": "authorScore",
                     "type": "integer",
                     "status": "available",
                     "required": false,
@@ -304,36 +281,55 @@
                     "default": null
                 },
                 {
-                    "key": "thumbnailUrl",
+                    "key": "goldScore",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "name",
                     "type": "string",
                     "status": "available",
                     "required": false,
                     "array": false,
-                    "size": 2048,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "key",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "authorScore",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "bronzeScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
                     "default": null
                 },
                 {
                     "key": "totalScorePositions",
-                    "type": "integer",
-                    "status": "available",
-                    "required": false,
-                    "array": false,
-                    "min": -9123372036854776000,
-                    "max": 9123372036854776000,
-                    "default": null
-                },
-                {
-                    "key": "authorScorePosition",
-                    "type": "integer",
-                    "status": "available",
-                    "required": false,
-                    "array": false,
-                    "min": -9123372036854776000,
-                    "max": 9123372036854776000,
-                    "default": null
-                },
-                {
-                    "key": "goldScorePosition",
                     "type": "integer",
                     "status": "available",
                     "required": false,
@@ -353,7 +349,17 @@
                     "default": null
                 },
                 {
-                    "key": "bronzeScorePosition",
+                    "key": "year",
+                    "type": "integer",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "goldScorePosition",
                     "type": "integer",
                     "status": "available",
                     "required": false,
@@ -361,6 +367,56 @@
                     "min": -9123372036854776000,
                     "max": 9123372036854776000,
                     "default": null
+                },
+                {
+                    "key": "bronzeDifficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
+                },
+                {
+                    "key": "silverDifficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
+                },
+                {
+                    "key": "goldDifficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
+                },
+                {
+                    "key": "authorDifficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
+                },
+                {
+                    "key": "difficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
                 }
             ],
             "indexes": []
