--- a/backend/appwrite.json
+++ b/backend/appwrite.json
@@ -1,6 +1,6 @@
 {
     "projectId": "tmStats",
-    "projectName": "TMStats V1",
+    "projectName": "tmStats",
     "collections": [
         {
             "$id": "profiles",
@@ -420,13 +420,261 @@
                 }
             ],
             "indexes": []
+        },
+        {
+            "$id": "weeklyMaps",
+            "$createdAt": "2022-09-22T16:50:40.601+00:00",
+            "$updatedAt": "2022-09-22T16:50:40.601+00:00",
+            "$permissions": [
+                "read(\"any\")"
+            ],
+            "databaseId": "default",
+            "name": "weeklyMaps",
+            "enabled": true,
+            "documentSecurity": false,
+            "attributes": [
+                {
+                    "key": "mapid",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "mapUid",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "year",
+                    "type": "integer",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "week",
+                    "type": "integer",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "position",
+                    "type": "integer",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "silverScore",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "thumbnailUrl",
+                    "type": "string",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "size": 2048,
+                    "default": null
+                },
+                {
+                    "key": "seasonUid",
+                    "type": "string",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "authorScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "bronzeScore",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "collectionName",
+                    "type": "string",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "goldScore",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "name",
+                    "type": "string",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "key",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "authorScore",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "bronzeScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "totalScorePositions",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "silverScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "goldScorePosition",
+                    "type": "integer",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -9123372036854776000,
+                    "max": 9123372036854776000,
+                    "default": null
+                },
+                {
+                    "key": "bronzeDifficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
+                },
+                {
+                    "key": "silverDifficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
+                },
+                {
+                    "key": "goldDifficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
+                },
+                {
+                    "key": "authorDifficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
+                },
+                {
+                    "key": "difficulty",
+                    "type": "double",
+                    "status": "available",
+                    "required": false,
+                    "array": false,
+                    "min": -1.7976931348623157e+308,
+                    "max": 1.7976931348623157e+308,
+                    "default": 0
+                }
+            ],
+            "indexes": []
         }
     ],
     "functions": [
         {
             "$id": "nadeoAction",
             "name": "nadeoAction",
-            "runtime": "deno-1.24",
+            "runtime": "deno-2.0",
             "path": "functions/nadeoAction",
             "entrypoint": "src/mod.ts",
             "execute": [
@@ -438,12 +686,19 @@
             ],
             "events": [],
             "schedule": "",
-            "timeout": 60
+            "timeout": 60,
+            "enabled": true,
+            "logging": true,
+            "scopes": [
+                "documents.read",
+                "documents.write"
+            ],
+            "commands": ""
         },
         {
             "$id": "nadeoCron",
             "name": "nadeoCron",
-            "runtime": "deno-1.24",
+            "runtime": "deno-2.0",
             "path": "functions/nadeoAction",
             "entrypoint": "src/mod_daily_cron.ts",
             "execute": [],
@@ -453,12 +708,19 @@
             ],
             "events": [],
             "schedule": "3 * * * *",
-            "timeout": 300
+            "timeout": 300,
+            "enabled": true,
+            "logging": true,
+            "scopes": [
+                "documents.read",
+                "documents.write"
+            ],
+            "commands": ""
         },
         {
             "$id": "convertId",
             "name": "convertId",
-            "runtime": "deno-1.24",
+            "runtime": "deno-2.0",
             "path": "functions/convertId",
             "entrypoint": "src/mod.ts",
             "execute": [
@@ -470,12 +732,16 @@
             ],
             "events": [],
             "schedule": "",
-            "timeout": 15
+            "timeout": 15,
+            "enabled": true,
+            "logging": true,
+            "scopes": [],
+            "commands": ""
         },
         {
             "$id": "calculateDifficulties",
             "name": "calculateDifficulties",
-            "runtime": "deno-1.24",
+            "runtime": "deno-2.0",
             "path": "functions/calculateDifficulties",
             "entrypoint": "src/mod.ts",
             "execute": [],
@@ -485,7 +751,14 @@
             ],
             "events": [],
             "schedule": "6 * * * *",
-            "timeout": 60
+            "timeout": 60,
+            "enabled": true,
+            "logging": true,
+            "scopes": [
+                "documents.read",
+                "documents.write"
+            ],
+            "commands": ""
         }
     ]
 }
