Simplify, add fetching for campaing+shorts

--- a/backend/appwrite.json
+++ b/backend/appwrite.json
@@ -209,25 +209,6 @@
 					"default": null
 				},
 				{
-					"key": "seasonUid",
-					"type": "string",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"size": 255,
-					"default": null
-				},
-				{
-					"key": "authorScorePosition",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
 					"key": "month",
 					"type": "integer",
 					"status": "available",
@@ -295,36 +276,6 @@
 					"default": null
 				},
 				{
-					"key": "bronzeScorePosition",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
-					"key": "totalScorePositions",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
-					"key": "silverScorePosition",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
 					"key": "year",
 					"type": "integer",
 					"status": "available",
@@ -333,66 +284,6 @@
 					"min": -9123372036854776000,
 					"max": 9123372036854776000,
 					"default": null
-				},
-				{
-					"key": "goldScorePosition",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
-					"key": "bronzeDifficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
-				},
-				{
-					"key": "silverDifficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
-				},
-				{
-					"key": "goldDifficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
-				},
-				{
-					"key": "authorDifficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
-				},
-				{
-					"key": "difficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
 				}
 			],
 			"indexes": []
@@ -455,7 +346,17 @@
 					"default": null
 				},
 				{
-					"key": "seasonUid",
+					"key": "bronzeScore",
+					"type": "integer",
+					"status": "available",
+					"required": false,
+					"array": false,
+					"min": -9123372036854776000,
+					"max": 9123372036854776000,
+					"default": null
+				},
+				{
+					"key": "collectionName",
 					"type": "string",
 					"status": "available",
 					"required": false,
@@ -464,13 +365,120 @@
 					"default": null
 				},
 				{
-					"key": "authorScorePosition",
+					"key": "goldScore",
 					"type": "integer",
 					"status": "available",
 					"required": false,
 					"array": false,
 					"min": -9123372036854776000,
 					"max": 9123372036854776000,
+					"default": null
+				},
+				{
+					"key": "name",
+					"type": "string",
+					"status": "available",
+					"required": false,
+					"array": false,
+					"size": 255,
+					"default": null
+				},
+				{
+					"key": "key",
+					"type": "string",
+					"status": "available",
+					"required": true,
+					"array": false,
+					"size": 255,
+					"default": null
+				},
+				{
+					"key": "authorScore",
+					"type": "integer",
+					"status": "available",
+					"required": false,
+					"array": false,
+					"min": -9123372036854776000,
+					"max": 9123372036854776000,
+					"default": null
+				},
+				{
+					"key": "year",
+					"type": "integer",
+					"status": "available",
+					"required": true,
+					"array": false,
+					"min": -9123372036854776000,
+					"max": 9123372036854776000,
+					"default": null
+				},
+				{
+					"key": "position",
+					"type": "integer",
+					"status": "available",
+					"required": true,
+					"array": false,
+					"min": -9123372036854776000,
+					"max": 9123372036854776000,
+					"default": null
+				}
+			],
+			"indexes": []
+		},
+		{
+			"$id": "campaignMaps",
+			"$createdAt": "2022-09-22T16:50:40.601+00:00",
+			"$updatedAt": "2022-09-22T16:50:40.601+00:00",
+			"$permissions": ["read(\"any\")"],
+			"databaseId": "default",
+			"name": "campaignMaps",
+			"enabled": true,
+			"documentSecurity": false,
+			"attributes": [
+				{
+					"key": "campaignUid",
+					"type": "string",
+					"status": "available",
+					"required": true,
+					"array": false,
+					"size": 255,
+					"default": null
+				},
+				{
+					"key": "mapid",
+					"type": "string",
+					"status": "available",
+					"required": true,
+					"array": false,
+					"size": 255,
+					"default": null
+				},
+				{
+					"key": "mapUid",
+					"type": "string",
+					"status": "available",
+					"required": true,
+					"array": false,
+					"size": 255,
+					"default": null
+				},
+				{
+					"key": "silverScore",
+					"type": "integer",
+					"status": "available",
+					"required": false,
+					"array": false,
+					"min": -9123372036854776000,
+					"max": 9123372036854776000,
+					"default": null
+				},
+				{
+					"key": "thumbnailUrl",
+					"type": "string",
+					"status": "available",
+					"required": false,
+					"array": false,
+					"size": 2048,
 					"default": null
 				},
 				{
@@ -531,46 +539,6 @@
 					"default": null
 				},
 				{
-					"key": "bronzeScorePosition",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
-					"key": "totalScorePositions",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
-					"key": "silverScorePosition",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
-					"key": "year",
-					"type": "integer",
-					"status": "available",
-					"required": true,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
 					"key": "position",
 					"type": "integer",
 					"status": "available",
@@ -579,66 +547,6 @@
 					"min": -9123372036854776000,
 					"max": 9123372036854776000,
 					"default": null
-				},
-				{
-					"key": "goldScorePosition",
-					"type": "integer",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -9123372036854776000,
-					"max": 9123372036854776000,
-					"default": null
-				},
-				{
-					"key": "bronzeDifficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
-				},
-				{
-					"key": "silverDifficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
-				},
-				{
-					"key": "goldDifficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
-				},
-				{
-					"key": "authorDifficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
-				},
-				{
-					"key": "difficulty",
-					"type": "double",
-					"status": "available",
-					"required": false,
-					"array": false,
-					"min": -1.7976931348623157e308,
-					"max": 1.7976931348623157e308,
-					"default": 0
 				}
 			],
 			"indexes": []
@@ -691,22 +599,6 @@
 			"enabled": true,
 			"logging": true,
 			"scopes": [],
-			"commands": ""
-		},
-		{
-			"$id": "calculateDifficulties",
-			"name": "calculateDifficulties",
-			"runtime": "deno-2.0",
-			"path": "functions/calculateDifficulties",
-			"entrypoint": "src/mod.ts",
-			"execute": [],
-			"ignore": ["node_modules", ".npm"],
-			"events": [],
-			"schedule": "6 * * * *",
-			"timeout": 60,
-			"enabled": true,
-			"logging": true,
-			"scopes": ["documents.read", "documents.write"],
 			"commands": ""
 		}
 	]
