--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,25 @@
-.DS_Store
+test-results
 node_modules
-/build
+.appwrite
+
+# Output
+.output
+.vercel
+.netlify
+.wrangler
 /.svelte-kit
-/package
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
 .env
 .env.*
 !.env.example
-.svelte-kit
-.appwrite
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
